--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,7 +48,8 @@ android {
 }
 
 dependencies {
-
+    implementation project(path: ':domain')
+    implementation project(path: ':data')
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
