--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,33 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
         compose_version = '1.0.1'
     }
     repositories {
         google()
+        maven {
+            url 'https://plugins.gradle.org/m2/'
+        }
         mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
+        classpath 'org.jlleitschuh.gradle:ktlint-gradle:10.2.0'
+    }
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+
+}
+
+subprojects {
+    apply plugin: "org.jlleitschuh.gradle.ktlint"
+
+    repositories {
+        mavenCentral()
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply plugin: "org.jlleitschuh.gradle.ktlint"
