--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -37,8 +37,8 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.21'
+        kotlinCompilerExtensionVersion "$project.compose_version"
+        kotlinCompilerVersion "$project.kotlin_version"
     }
     packagingOptions {
         resources {
@@ -50,17 +50,23 @@ android {
 dependencies {
     implementation project(path: ':domain')
     implementation project(path: ':data')
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    implementation project.androidKtx
+    implementation project.androidxAppCompat
+    implementation project.material
+
+    implementation project.uiCompose
+    implementation project.activityCompose
+    implementation project.composeMaterial
+    implementation project.composePreview
+    debugImplementation project.composeTooling
+    androidTestImplementation project.composeUiTest
+
+    implementation project.androidxLifecycleLivedata
+    implementation project.androidLifecycleViewmodel
+    implementation project.androidLifecycleRuntimeKtx
+
+    testImplementation project.junit
+    androidTestImplementation project.androidJunit
+    androidTestImplementation project.espresso
 }
