--- a/data/build.gradle
+++ b/data/build.gradle
@@ -34,8 +34,15 @@ android {
 
 dependencies {
     implementation project(path: ':domain')
-    implementation 'androidx.core:core-ktx:1.6.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation project.retrofit
+    implementation project.retrofitMoshiConvert
+    implementation project.retrofitGsonConvert
+    implementation project.retrofitScalarsConverter
+    implementation project.okhttp
+    implementation project.okhttpLogging
+
+    testImplementation project.junit
+    androidTestImplementation project.androidJunit
+    androidTestImplementation project.espresso
 }
