--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -10,8 +12,8 @@ android {
         applicationId "im.koala.bcsd"
         minSdk 21
         targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        versionCode 10000
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -69,4 +71,7 @@ dependencies {
     testImplementation project.junit
     androidTestImplementation project.androidJunit
     androidTestImplementation project.espresso
+
+    implementation project.hiltAndroid
+    kapt project.hiltCompiler
 }
