--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -10,8 +12,8 @@ android {
     defaultConfig {
         minSdk 21
         targetSdk 31
-        versionCode 1
-        versionName "1.0"
+        versionCode 10000
+        versionName "1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -36,4 +38,7 @@ dependencies {
     testImplementation project.junit
     androidTestImplementation project.androidJunit
     androidTestImplementation project.espresso
+
+    implementation project.hiltAndroid
+    kapt project.hiltCompiler
 }
