#11 Add coroutine android library
#11 Add coroutine android library

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,6 @@ dependencies {
 
     implementation project.hiltAndroid
     kapt project.hiltCompiler
+
+    implementation project.coroutineAndroid
 }
