--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -112,4 +112,7 @@ ext {
     hiltAndroid = "com.google.dagger:hilt-android:$hilt_version"
     hiltCompiler = "com.google.dagger:hilt-compiler:$hilt_version"
 
+    /* Dependency - coroutine android*/
+    def coroutine_android_version = "1.5.0"
+    coroutineAndroid = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_android_version"
 }
