#15 Add sign up page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation project.activityCompose
     implementation project.composeMaterial
     implementation project.composePreview
+    implementation project.constraintLayoutCompose
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     debugImplementation project.composeTooling
     androidTestImplementation project.composeUiTest
 
