--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Koala.NoActionBar">
         <activity
+            android:name=".ui.findpassword.FindPasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.join.JoinActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.findid.FindIdActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.LoginActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
