--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -51,6 +51,7 @@ ext {
     androidxNavigationUi = "androidx.navigation:navigation-ui:$androidx_navigation_version"
     androidxNavgationKtx = "androidx.navigation:navigation-ui-ktx:$androidx_navigation_version"
     androidxNavgationFragment = "androidx.navigation:navigation-fragment-ktx:$androidx_navigation_version"
+    androidxNavigationCompose = "androidx.navigation:navigation-compose:2.4.0-beta02"
 
     def androidx_material_version = "1.2.1"
     androidxMaterial = "com.google.android.material:material:$androidx_material_version"
