--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        jcenter() // Warning: this im.koala.bcsd.repository is going to shut down soon
     }
 }
 
