--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,16 +26,16 @@
             android:name=".ui.login.LoginActivity"
             android:exported="true"
             android:label="@string/app_name">
-        </activity>
-        <activity android:name=".ui.signup.SignupActivity"
-            android:exported="true"
-            android:windowSoftInputMode="adjustResize">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ui.signup.SignupActivity"
+            android:exported="true"
+            android:label="@string/app_bar_title_signup"
+            android:windowSoftInputMode="adjustResize">
         </activity>
     </application>
 
