#34 crashlytics, analytics 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
 }
 
 android {
@@ -52,6 +54,10 @@ android {
 dependencies {
     implementation project(path: ':domain')
     implementation project(path: ':data')
+
+    implementation platform(project.firebasePlatform)
+    implementation project.firebaseAnalyticsKtx
+    implementation project.firebaseCrashlyticsKtx
 
     implementation project.androidKtx
     implementation project.androidxAppCompat
