--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlin_version}"
         classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
         classpath 'org.jlleitschuh.gradle:ktlint-gradle:10.2.0'
+        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
     }
 }
 
