--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -138,6 +138,7 @@ ext {
     accompanistFlowLayout = "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
 
     /* Dependency - coroutine android*/
-    def coroutine_android_version = "1.5.0"
-    coroutineAndroid = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_android_version"
+    def coroutine_version = "1.5.0"
+    coroutineCore = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
+    coroutineAndroid = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 }
