Set Hilt Module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,6 @@ dependencies {
     implementation project.coroutineAndroid
 
     implementation project.kakao_login
+
+    implementation project.hawk
 }
