--- a/data/build.gradle
+++ b/data/build.gradle
@@ -50,4 +50,9 @@ dependencies {
 
     implementation project.hiltAndroid
     kapt project.hiltCompiler
+
+    implementation project.coroutineAndroid
+
+
+    implementation project.hawk
 }
