--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -41,4 +41,5 @@ dependencies {
 
     implementation project.hiltAndroid
     kapt project.hiltCompiler
+    implementation project.coroutineAndroid
 }
