--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -137,8 +137,13 @@ ext {
     accompanistInsets = "com.google.accompanist:accompanist-insets:$accompanist_version"
     accompanistFlowLayout = "com.google.accompanist:accompanist-flowlayout:$accompanist_version"
 
-    /* Dependency - coroutine android*/
+    /* Dependency - coroutine android */
     def coroutine_version = "1.5.0"
     coroutineCore = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
     coroutineAndroid = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+    coroutineTest = "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutine_version"
+
+    /* Dependency - Mockito */
+    def mockito_version = "4.2.0"
+    mockitoCore = "org.mockito:mockito-core:$mockito_version"
 }
