--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     androidTestImplementation project.espresso
 
     implementation project.coroutineCore
+    testImplementation project.coroutineTest
 
     implementation project.hiltAndroid
     kapt project.hiltCompiler
