--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -169,4 +169,8 @@ ext {
     /* Dependency - firebase crashlytics ktx */
     def firebase_crashlytics_ktx_version = "18.2.6"
     firebaseCrashlyticsKtx = "com.google.firebase:firebase-crashlytics-ktx:$firebase_crashlytics_ktx_version"
+
+    /* naver login api */
+    def naver_login_version = "4.2.6"
+    naverIdLogin = "com.naver.nid:naveridlogin-android-sdk:$naver_login_version"
 }
