--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,4 +122,7 @@ dependencies {
     implementation project.naverIdLogin
 
     implementation project.googlePlayService
+    implementation project.viewPager
+    implementation project.viewPagerIndicators
+
 }
