#56 Fix kakao login

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation platform(project.firebasePlatform)
     implementation project.firebaseAnalyticsKtx
     implementation project.firebaseCrashlyticsKtx
+    implementation project.firebaseCloudMessage
 
     implementation project.androidKtx
     implementation project.androidxAppCompat
