#35 add device token and fix state

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation platform(project.firebasePlatform)
     implementation project.firebaseAnalyticsKtx
     implementation project.firebaseCrashlyticsKtx
+    implementation project.firebaseCloudMessage
 
     implementation project.androidKtx
     implementation project.androidxAppCompat
