--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -185,4 +185,6 @@ ext {
     /* Google Play Service */
     def google_play_service_version = "20.0.0"
     googlePlayService = "com.google.android.gms:play-services-auth:$google_play_service_version"
+
+    firebaseCloudMessage = "com.google.firebase:firebase-messaging-ktx"
 }
