--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -50,4 +50,5 @@ dependencies {
     kapt project.hiltCompiler
     implementation project.coroutineAndroid
 
+    implementation project.retrofitGsonConvert
 }
