#50 keyword list add and delete feature

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -123,4 +123,7 @@ dependencies {
     implementation project.naverIdLogin
 
     implementation project.googlePlayService
+
+    implementation project.viewPager
+    implementation project.viewPagerIndicators
 }
