--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="im.koala.bcsd">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".KoalaApp"
         android:allowBackup="true"
@@ -12,6 +13,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Koala.NoActionBar">
+        <activity
+            android:name=".ui.keywordedit.KeywordEditActivity"
+            android:exported="false"
+            android:label="@string/title_activity_keyword_edit"
+            android:theme="@style/Theme.Koala.NoActionBar" />
         <activity
             android:name=".ui.tutorial.TutorialActivity"
             android:exported="false" />
@@ -65,11 +71,11 @@
         <activity
             android:name="com.nhn.android.naverlogin.ui.OAuthLoginActivity"
             android:exported="true"
-            tools:node="merge"></activity>
+            tools:node="merge" />
         <activity
             android:name="com.nhn.android.naverlogin.ui.OAuthLoginInAppBrowserActivity"
             android:exported="true"
-            tools:node="merge"></activity>
+            tools:node="merge" />
         <activity
             android:name="com.nhn.android.naverlogin.ui.OAuthCustomTabActivity"
             android:exported="true"
