#68 refactoring sns login fix viewmodel

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,8 @@ dependencies {
     implementation project.firebaseAnalyticsKtx
     implementation project.firebaseCrashlyticsKtx
     implementation project.firebaseCloudMessage
+    implementation project.firebaseAuth
+    implementation project.gmsAuth
 
     implementation project.androidKtx
     implementation project.androidxAppCompat
