#70 add keyword edit feature 2st commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,10 @@
         android:theme="@style/Theme.Koala.NoActionBar">
         <activity
             android:name=".ui.keywordedit.KeywordEditActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="@string/title_activity_keyword_edit"
-            android:theme="@style/Theme.Koala.NoActionBar" />
+            android:theme="@style/Theme.Koala.NoActionBar" >
+        </activity>
         <activity
             android:name=".ui.tutorial.TutorialActivity"
             android:exported="false" />
